--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,7 @@ ul{
 li{
     margin-top: 1rem;
 }
-button{
+input, select, textarea, button{
     padding: 1rem;
     border: 0.1rem solid #a4a4a4;
     border-radius: 0.5rem;
@@ -78,10 +78,12 @@ button{
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f8f8f8;
-    cursor: pointer;
 }
-button:hover{
+button{
+background-color: #f8f8f8;
+cursor: pointer;
+}
+input:hover, select:hover, textarea:hover, button:hover{
     border: 0.1rem solid #404040;
 }
 button.primary{
