--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,6 +102,14 @@ a.brand{
     font-size: 3rem;
     font-weight: 500;
 }
+.badge{
+    background-color: #f02020;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 0.2rem 0.7rem;
+    font-size: 1.4rem;
+    margin-left: 0.2rem;
+}
 .row.center{
     justify-content: center;
 }
@@ -114,10 +122,17 @@ a.brand{
 .col-2{
     flex: 2 1 50rem;
 }
+.min-30{
+    min-width: 30rem;
+}
 /* images */
 
 img{
     border-radius: 0.5rem;
+}
+img.small{
+    max-width: 5rem;
+    width: 100%;
 }
 img.medium{
     max-width: 29rem;
@@ -126,7 +141,7 @@ img.medium{
 img.large{
     width: 100%;
 }
-/* Product Card */
+/* Card */
 .card{
     border: 0.1rem solid #c0c0c0;
     background-color: #f8f8f8;
